--- a/app-stage/package.json
+++ b/app-stage/package.json
@@ -10,10 +10,11 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "electron": "electron .",
-    "electron-dev": "electron .",
+    "electron-dev": "concurrently \"cross-env BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\"",
     "electron-pack": "npm run build && electron-builder",
     "dist": "npm run build && electron-builder --publish=never",
-    "postinstall": "electron-builder install-app-deps"
+    "postinstall": "electron-builder install-app-deps",
+    "dev": "concurrently \"cd server && npm run dev\" \"npm run electron-dev\""
   },
   "build": {
     "appId": "com.admin.app",
