--- a/app-stage/server/package.json
+++ b/app-stage/server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
+    "dev": "nodemon start-server.js",
     "test": "jest"
   },
   "keywords": [
